--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -79,6 +79,12 @@ jobs:
             echo "No changes to commit"
           fi
 
+      - name: Extract Symbols
+        id: extract_symbols
+        run: |
+          cd repo
+          bash ../.github/workflows/extract_symbols.sh
+
       # ---------------------------------------------------------
       # Send Telegram notification based on success or failure
       # ---------------------------------------------------------
