Fixed path of extract_symbol.sh file in scrape.yml

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -83,7 +83,7 @@ jobs:
         id: extract_symbols
         run: |
           cd repo
-          bash ../.github/workflows/extract_symbols.sh
+          bash extract_symbols.sh
 
       # ---------------------------------------------------------
       # Send Telegram notification based on success or failure
