Fixed paths of bash file to extract symbols

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -82,8 +82,7 @@ jobs:
       - name: Extract Symbols
         id: extract_symbols
         run: |
-          cd repo
-          bash extract_symbols.sh
+          bash .github/workflows/extract_symbols.sh repo/scraper_output.log
 
       # ---------------------------------------------------------
       # Send Telegram notification based on success or failure
