--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -79,7 +79,7 @@ jobs:
 
           if ! git diff --quiet; then
             git add .
-            git commit -m "Automated scrape on $(date -u +'%Y-%m-%d %H:%M:%S')" -m "[skip ci]"
+            git commit -m "Automated scrape on $(date -u +'%Y-%m-%d %H:%M:%S')"
             git push
           else
             echo "No changes to commit"
